Navbar fix on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -79,7 +79,7 @@ h2 {
     font-size: 5vw !important;
   }
   a{
-    margin: 0 10px;
+    margin: 0;
     font-size: 4.5vw !important;
   }
   .imageContainer {
